--- a/client/src/components/signup.css
+++ b/client/src/components/signup.css
@@ -68,7 +68,7 @@ button.ghost {
 	border-color: #FFFFFF;
 }
 
-form {
+.Authform {
 	background-color: #FFFFFF;
 	display: flex;
 	align-items: center;
