--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1656,3 +1656,96 @@ button.btn-cont-temps-amk {
 .btn-primary{
   background: rgb(51, 51, 51)
  }
+
+
+ .cardd{
+   /* margin-left: 3rem; */
+   /* text-align: center   */
+ }
+.card {
+  /* text-align: center; */
+  /* width:800px; */
+}
+
+.card-img {
+  border-bottom-left-radius: 0px;
+  border-bottom-right-radius: 0px;
+}
+
+.card-title {
+  margin-bottom: 0.3rem;
+}
+
+.cat {
+  display: inline-block;
+  margin-bottom: 1rem;
+}
+
+.fa-users {
+  margin-left: 1rem;
+}
+
+.card-footer {
+  font-size: 0.8rem;
+}
+
+.AddPost {
+  display: flex;
+  justify-content: space-between;
+  align-content: space-between;
+
+}
+
+.PostBoxpic{
+  margin-right: 1rem;
+  max-width: 90px;
+  max-height: 50px;
+
+}
+
+.PostBoxInput{
+  grid-area: "b"
+}
+
+
+.feedPost{
+  margin-top: 10px;
+  display: flex;
+  /* grid-template-columns: 100px ; */
+  /* grid-gap: 10px; */
+  flex-direction: column
+  /* justify-content: start */
+}
+
+.dashboard {
+  display: grid;
+  grid-gap: 10px;
+      grid-template-columns: 200px  ;
+      grid-template-areas:
+      "content content sidebar"
+      /* "content  content  sidebar"; */
+      /* background-color: #fff; */
+      /* color: #444; */
+
+}
+
+.sidebar {
+  grid-area: sidebar;
+  margin-top: 50px;
+}
+
+.content {
+  grid-area: content;
+  /* position: relative; */
+}
+
+.alert{
+  width: 20rem;
+  max-width: 20rem;
+  max-height: 5rem;
+}
+
+.live{
+  display: flex;
+  flex-direction: column;
+}
