--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1749,3 +1749,12 @@ button.btn-cont-temps-amk {
   display: flex;
   flex-direction: column;
 }
+
+.compButton {
+  text-align: center;
+
+}
+
+/* .compdiv{
+      margin-left:5rem;
+} */
