--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,8 +1,8 @@
 body {
   padding: 0;
   margin: 0;
-  background: #FFF;
-  font-family: 'Poppins', sans-serif;
+  background: #fff;
+  font-family: "Poppins", sans-serif;
 }
 
 body button,
@@ -17,7 +17,7 @@ body a {
 
 .btn:hover,
 body button:hover {
-  opacity: .8;
+  opacity: 0.8;
   transition: 0.5s all;
   -webkit-transition: 0.5s all;
   -moz-transition: 0.5s all;
@@ -98,9 +98,9 @@ ol {
 
 /* header */
 header {
-  -webkit-box-shadow: 0.33333rem 0 1.33333rem rgba(87, 87, 87, .1);
-  -moz-box-shadow: 0.33333rem 0 1.33333rem rgba(87, 87, 87, .1);
-  box-shadow: 0.33333rem 0 1.33333rem rgba(87, 87, 87, .1);
+  -webkit-box-shadow: 0.33333rem 0 1.33333rem rgba(87, 87, 87, 0.1);
+  -moz-box-shadow: 0.33333rem 0 1.33333rem rgba(87, 87, 87, 0.1);
+  box-shadow: 0.33333rem 0 1.33333rem rgba(87, 87, 87, 0.1);
   background: #fff;
 }
 
@@ -113,7 +113,7 @@ header {
 /* CSS Document */
 .toggle-2,
 .toggle,
-[id^=drop] {
+[id^="drop"] {
   display: none;
 }
 
@@ -163,7 +163,7 @@ nav ul li {
 nav a {
   color: #202428;
   font-size: 15px;
-  letter-spacing: .5px;
+  letter-spacing: 0.5px;
   margin: 0 14px;
   font-weight: 400;
 }
@@ -194,7 +194,7 @@ nav ul ul {
 }
 
 /* Display Dropdowns on Hover */
-nav ul li:hover>ul {
+nav ul li:hover > ul {
   display: inherit;
 }
 
@@ -235,124 +235,123 @@ nav ul ul ul li {
   left: 170px;
 }
 
-
 /* Change ' +' in order to change the Dropdown symbol */
-li>a:only-child:after {
-  content: '';
+li > a:only-child:after {
+  content: "";
 }
 
 /* Media Queries
 --------------------------------------------- */
-@media all and (max-width : 991px) {
+@media all and (max-width: 991px) {
   #logo {
-      display: block;
-      padding: 0;
-      width: 100%;
-      text-align: center;
-      float: none;
+    display: block;
+    padding: 0;
+    width: 100%;
+    text-align: center;
+    float: none;
   }
 
   nav {
-      margin: 0;
+    margin: 0;
   }
 
   /* Hide the navigation menu by default */
   /* Also hide the  */
-  .toggle+a,
+  .toggle + a,
   .menu {
-      display: none;
+    display: none;
   }
 
   /* Stylinf the toggle lable */
   .toggle {
-      display: block;
-      padding: 6px 12px;
-      font-size: 14px;
-      text-decoration: none;
-      border: none;
-      float: right;
-      color: #000;
-      font-weight: 500;
-      letter-spacing: 1px;
-      border: 1px solid #000;
-      margin-bottom: 0;
-      cursor: pointer;
-      -webkit-border-radius: 4px;
-      -o-border-radius: 4px;
-      -ms-border-radius: 4px;
-      -moz-border-radius: 4px;
-      border-radius: 4px;
-      transition: 0.5s all;
-      -webkit-transition: 0.5s all;
-      -moz-transition: 0.5s all;
-      -o-transition: 0.5s all;
-      -ms-transition: 0.5s all;
+    display: block;
+    padding: 6px 12px;
+    font-size: 14px;
+    text-decoration: none;
+    border: none;
+    float: right;
+    color: #000;
+    font-weight: 500;
+    letter-spacing: 1px;
+    border: 1px solid #000;
+    margin-bottom: 0;
+    cursor: pointer;
+    -webkit-border-radius: 4px;
+    -o-border-radius: 4px;
+    -ms-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
+    transition: 0.5s all;
+    -webkit-transition: 0.5s all;
+    -moz-transition: 0.5s all;
+    -o-transition: 0.5s all;
+    -ms-transition: 0.5s all;
   }
 
   .menu .toggle {
-      float: none;
-      text-align: center;
-      margin: auto;
-      max-width: 120px;
-      padding: 5px;
-      font-size: 14px;
-      letter-spacing: .5px;
-      color: #202428;
-      font-weight: 400;
-      border: none;
+    float: none;
+    text-align: center;
+    margin: auto;
+    max-width: 120px;
+    padding: 5px;
+    font-size: 14px;
+    letter-spacing: 0.5px;
+    color: #202428;
+    font-weight: 400;
+    border: none;
   }
 
   /* Display Dropdown when clicked on Parent Lable */
-  [id^=drop]:checked+ul {
-      display: block;
-      background: #fff;
-      padding: 15px 0;
-      text-align: center;
-      width: 100%;
+  [id^="drop"]:checked + ul {
+    display: block;
+    background: #fff;
+    padding: 15px 0;
+    text-align: center;
+    width: 100%;
   }
 
   /* Change menu item's width to 100% */
   nav ul li {
-      display: block;
-      width: 100%;
-      padding: 5px 0;
+    display: block;
+    width: 100%;
+    padding: 5px 0;
   }
 
   nav a:hover,
   nav ul ul ul a {
-      background-color: transparent;
+    background-color: transparent;
   }
 
   /* Hide Dropdowns by Default */
   nav ul ul {
-      float: none;
-      position: static;
-      color: #fff;
-      /* has to be the same number as the "line-height" of "nav a" */
+    float: none;
+    position: static;
+    color: #fff;
+    /* has to be the same number as the "line-height" of "nav a" */
   }
 
   /* Hide menus on hover */
-  nav ul ul li:hover>ul,
-  nav ul li:hover>ul {
-      display: none;
+  nav ul ul li:hover > ul,
+  nav ul li:hover > ul {
+    display: none;
   }
 
   /* Fisrt Tier Dropdown */
   nav ul ul li {
-      display: block;
-      width: 100%;
-      padding: 0;
+    display: block;
+    width: 100%;
+    padding: 0;
   }
 
   nav ul ul ul li {
-      position: static;
-      /* has to be the same number as the "width" of "nav ul ul li" */
+    position: static;
+    /* has to be the same number as the "width" of "nav ul ul li" */
   }
 
   nav ul ul li a {
-      color: #000;
-      font-size: 15px;
-      padding: 0;
+    color: #000;
+    font-size: 15px;
+    padding: 0;
   }
 }
 
@@ -376,8 +375,9 @@ li>a:only-child:after {
   color: #fff;
   z-index: 2;
   position: relative;
-  -webkit-transition: border-radius .1s linear, background .1s linear, z-index 0s linear;
-  -webkit-transition-delay: .8s;
+  -webkit-transition: border-radius 0.1s linear, background 0.1s linear,
+    z-index 0s linear;
+  -webkit-transition-delay: 0.8s;
   text-align: center;
   color: #fff;
   text-transform: capitalize;
@@ -389,11 +389,11 @@ li>a:only-child:after {
 }
 
 #demo .parent:hover,
-#demo .content:hover~.parent {
+#demo .content:hover ~ .parent {
   -webkit-transition-delay: 0s, 0s, 0s;
 }
 
-#demo .content:hover~.parent {
+#demo .content:hover ~ .parent {
   border-bottom-left-radius: 0;
   border-bottom-right-radius: 0;
   z-index: 0;
@@ -407,8 +407,8 @@ li>a:only-child:after {
   height: 0;
   width: 150px;
   padding-top: 30px;
-  -webkit-transition: height .5s ease;
-  -webkit-transition-delay: .4s;
+  -webkit-transition: height 0.5s ease;
+  -webkit-transition-delay: 0.4s;
 }
 
 #demo .wrapper:active .content {
@@ -422,7 +422,6 @@ li>a:only-child:after {
   z-index: 3;
   -webkit-transition-delay: 0s;
 }
-
 
 #demo .content ul {
   background: #fff;
@@ -707,7 +706,7 @@ ul.temps-amkl-right-book li {
 .about-in .bg-clr-temps-amkl {
   width: 75px;
   height: 75px;
-  background: #FF3A46;
+  background: #ff3a46;
   -webkit-border-radius: 50%;
   -o-border-radius: 50%;
   -moz-border-radius: 50%;
@@ -864,7 +863,6 @@ a.move-top span {
 
 /* //partners */
 
-
 /* stats */
 p.title-sub-2 {
   font-size: 19px;
@@ -910,7 +908,6 @@ li.breadcrumb-item {
   color: #000;
   letter-spacing: 1px;
   font-size: 14px;
-
 }
 
 /* //breadcrumb */
@@ -969,20 +966,20 @@ ul.team-socil-temps-amkpvts li span {
   color: #333;
   font-size: 15px;
   margin: 0 6px;
-  transition: .5s all;
-  -webkit-transition: .5s all;
-  -moz-transition: .5s all;
-  -o-transition: .5s all;
-  -ms-transition: .5s all;
+  transition: 0.5s all;
+  -webkit-transition: 0.5s all;
+  -moz-transition: 0.5s all;
+  -o-transition: 0.5s all;
+  -ms-transition: 0.5s all;
 }
 
 ul.team-socil-temps-amkpvts li span:hover {
-  opacity: .8;
-  transition: .5s all;
-  -webkit-transition: .5s all;
-  -moz-transition: .5s all;
-  -o-transition: .5s all;
-  -ms-transition: .5s all;
+  opacity: 0.8;
+  transition: 0.5s all;
+  -webkit-transition: 0.5s all;
+  -moz-transition: 0.5s all;
+  -o-transition: 0.5s all;
+  -ms-transition: 0.5s all;
 }
 
 .ab-content img {
@@ -1013,7 +1010,7 @@ ul.team-socil-temps-amkpvts li span:hover {
   list-style: none outside;
 }
 
-.accordion>*+* {
+.accordion > * + * {
   border-top: 1px solid white;
 }
 
@@ -1033,7 +1030,7 @@ li.accordion-item {
   margin-bottom: 1.5em;
 }
 
-.accordion-item-input:checked~.accordion-item-bd {
+.accordion-item-input:checked ~ .accordion-item-bd {
   max-height: 1000px;
   -webkit-box-shadow: 0 4px 16px 0 rgba(0, 0, 0, 0.1);
   -moz-box-shadow: 0 4px 16px 0 rgba(0, 0, 0, 0.1);
@@ -1041,7 +1038,7 @@ li.accordion-item {
   padding: 2em;
 }
 
-.accordion-item-input:checked~.accordion-item-hd>.accordion-item-hd-cta {
+.accordion-item-input:checked ~ .accordion-item-hd > .accordion-item-hd-cta {
   -webkit-transform: rotate(0);
   -ms-transform: rotate(0);
   transform: rotate(0);
@@ -1054,8 +1051,8 @@ li.accordion-item {
   top: calc(50% - 6px);
   /*minus half font-size*/
   right: 0;
-  -webkit-transition: -webkit-transform .3s ease;
-  transition: transform .3s ease;
+  -webkit-transition: -webkit-transform 0.3s ease;
+  transition: transform 0.3s ease;
   -webkit-transform: rotate(-180deg);
   -ms-transform: rotate(-180deg);
   transform: rotate(-180deg);
@@ -1167,7 +1164,7 @@ h3.sec-hedadc {
 
 /* contact page */
 form.contact-amk-tems-do label {
-  letter-spacing: .5px;
+  letter-spacing: 0.5px;
   font-size: 15px;
 }
 
@@ -1215,453 +1212,447 @@ button.btn-cont-temps-amk {
 /* //contact page */
 
 /* responsive */
-@media(max-width: 1366px) {
+@media (max-width: 1366px) {
   h3.temps-amkls_pvt-title {
-      font-size: 3.5rem;
+    font-size: 3.5rem;
   }
 }
 
-@media(max-width: 1280px) {
-
+@media (max-width: 1280px) {
   h3.tittle,
   h2.tittle {
-      font-size: 38px;
+    font-size: 38px;
   }
 }
 
-@media(max-width: 1080px) {
+@media (max-width: 1080px) {
   .about-in .card {
-      padding: 2.5em 1em;
+    padding: 2.5em 1em;
   }
 
   .about-grid-main h4,
   .about-in h5.card-title {
-      font-size: 21px;
+    font-size: 21px;
   }
 
   .about-grid-main {
-      padding: 3em 2em;
+    padding: 3em 2em;
   }
 
   h3.temps-amkls_pvt-title {
-      font-size: 3rem;
+    font-size: 3rem;
   }
 
   p.text-sty-banner {
-      font-size: 15px;
+    font-size: 15px;
   }
 
   #logo a {
-      font-size: 30px;
+    font-size: 30px;
   }
 
   nav a {
-      font-size: 14px;
-      margin: 0 8px;
+    font-size: 14px;
+    margin: 0 8px;
   }
 
   .price-info {
-      padding: 0 .5em;
+    padding: 0 0.5em;
   }
 
   .prices-top {
-      left: 32%;
+    left: 32%;
   }
 }
 
-@media(max-width: 1024px) {
+@media (max-width: 1024px) {
   .parts-temps-amkls span {
-      font-size: 2.5em;
+    font-size: 2.5em;
   }
 
   .parts-temps-amkls h4 {
-      font-size: 14px;
+    font-size: 14px;
   }
 
   .accordion-item-hd {
-      font-size: 14px;
+    font-size: 14px;
   }
 
   .contact-amk-tems-do .form-control {
-      font-size: 14px;
+    font-size: 14px;
   }
 }
 
-@media(max-width: 991px) {
-
+@media (max-width: 991px) {
   h3.tittle,
   h2.tittle {
-      font-size: 36px;
+    font-size: 36px;
   }
 
   p.sub-tittle {
-      font-size: 15px;
+    font-size: 15px;
   }
 
   .about-in .card,
   .about-grid-main {
-      max-width: 500px;
-      margin: 0 auto;
+    max-width: 500px;
+    margin: 0 auto;
   }
 
   .about-grid-main {
-      padding: 3em;
+    padding: 3em;
   }
 
   h3.temps-amkls_pvt-title {
-      font-size: 2.5rem;
+    font-size: 2.5rem;
   }
 
   p.text-sty-banner {
-      font-size: 14px;
+    font-size: 14px;
   }
 
   .temps-amkls_banner_txt {
-      padding-top: 3vw;
+    padding-top: 3vw;
   }
 
   #logo a {
-      font-size: 26px;
+    font-size: 26px;
   }
 
   .services-icon {
-      padding: 0 .5em;
+    padding: 0 0.5em;
   }
 
   .services-grid {
-      padding: 0;
+    padding: 0;
   }
 
   .services-icon span {
-      font-size: 30px;
-      margin-top: 1.5em;
+    font-size: 30px;
+    margin-top: 1.5em;
   }
 
   .price-info {
-      padding: 0 1em;
+    padding: 0 1em;
   }
 
   .prices-top {
-      left: 38%;
+    left: 38%;
   }
 
   .price-info.price-mkres {
-      margin-top: 6em;
+    margin-top: 6em;
   }
 }
 
-@media(max-width: 768px) {
-
+@media (max-width: 768px) {
   h3.tittle,
   h2.tittle {
-      font-size: 34px;
+    font-size: 34px;
   }
 }
 
-@media(max-width: 736px) {
+@media (max-width: 736px) {
   h3.title-temps-amk {
-      font-size: 30px;
+    font-size: 30px;
   }
 
   p.title-sub-2 {
-      font-size: 17px;
+    font-size: 17px;
   }
 
   .about-right-faq h6 {
-      font-size: 14px;
+    font-size: 14px;
   }
 
   .about-right-faq h3 {
-      font-size: 32px;
+    font-size: 32px;
   }
 
   ul.temps-amkl-right-book li {
-      font-size: 15px;
+    font-size: 15px;
   }
 
   .button-style {
-      padding: 13px 24px;
-      font-size: 13px;
+    padding: 13px 24px;
+    font-size: 13px;
   }
 
   .services-icon,
   .services-grid {
-      padding: 0 1em;
+    padding: 0 1em;
   }
 
   .services-icon span {
-      font-size: 34px;
-      margin-top: .8em;
+    font-size: 34px;
+    margin-top: 0.8em;
   }
 
   h4.text-team-temps-amk {
-      font-size: 18px;
+    font-size: 18px;
   }
 
   .prices-top {
-      left: 32%;
+    left: 32%;
   }
 
   .prices-bottom h4 {
-      font-size: 24px;
+    font-size: 24px;
   }
 
   .prices-bottom ul li {
-      font-size: 15px;
+    font-size: 15px;
   }
 }
 
-@media(max-width: 640px) {
-
+@media (max-width: 640px) {
   h3.tittle,
   h2.tittle {
-      font-size: 30px;
+    font-size: 30px;
   }
 
   p.sub-tittle {
-      font-size: 14px;
+    font-size: 14px;
   }
 
   form.subscribe-amk-tems input[type="email"] {
-      font-size: 14px;
+    font-size: 14px;
   }
 
   form.subscribe-amk-tems button {
-      font-size: 15px;
+    font-size: 15px;
   }
 }
 
-@media(max-width: 568px) {
-
+@media (max-width: 568px) {
   .ab-content-inner,
   .price-info {
-      max-width: 400px;
-      margin: 0 auto;
+    max-width: 400px;
+    margin: 0 auto;
   }
 
   .price-info:nth-child(2) {
-      margin-top: 6em;
+    margin-top: 6em;
   }
 
   .prices-top {
-      left: 39%;
+    left: 39%;
   }
 
   .temps-amkl-map iframe {
-      min-height: 300px;
+    min-height: 300px;
   }
 }
 
-@media(max-width: 480px) {
+@media (max-width: 480px) {
   h3.title-temps-amk {
-      font-size: 26px;
+    font-size: 26px;
   }
 
   p.title-sub-2 {
-      font-size: 16px;
+    font-size: 16px;
   }
 
   .about-grid-main {
-      padding: 3em 2em;
+    padding: 3em 2em;
   }
 
   h3.temps-amkls_pvt-title {
-      font-size: 2.3rem;
+    font-size: 2.3rem;
   }
 
   img.shape-temps-amk-one {
-      right: 6%;
+    right: 6%;
   }
 
   .accordion-item-hd {
-      font-size: 13px;
+    font-size: 13px;
   }
 }
 
-@media(max-width: 440px) {
+@media (max-width: 440px) {
   p.sub-tittle {
-      font-size: 13px;
+    font-size: 13px;
   }
 
   h3.tittle,
   h2.tittle {
-      font-size: 28px;
+    font-size: 28px;
   }
 
   p {
-      font-size: 13px;
+    font-size: 13px;
   }
 
   nav a {
-      font-size: 13px;
+    font-size: 13px;
   }
 
   .search-temps-amklayouts input[type="search"] {
-      font-size: 12px;
+    font-size: 12px;
   }
 
   .search-temps-amklayouts button {
-      font-size: 13px;
+    font-size: 13px;
   }
 }
 
-@media(max-width: 414px) {
+@media (max-width: 414px) {
   .parts-temps-amkls span {
-      font-size: 2em;
+    font-size: 2em;
   }
 
   .parts-temps-amkls h4 {
-      font-size: 12px;
-      letter-spacing: 1px;
+    font-size: 12px;
+    letter-spacing: 1px;
   }
 
   .about-right-faq h3 {
-      font-size: 30px;
+    font-size: 30px;
   }
 
   .about-grid-main {
-      padding: 2em 1.5em;
+    padding: 2em 1.5em;
   }
 }
 
-@media(max-width: 384px) {
+@media (max-width: 384px) {
   .prices-top {
-      left: 37%;
+    left: 37%;
   }
 
   .temps-amkl-map iframe {
-      min-height: 280px;
+    min-height: 280px;
   }
 }
 
-@media(max-width: 375px) {
+@media (max-width: 375px) {
   form.subscribe-amk-tems button {
-      font-size: 14px;
-      padding: 13px 15px;
+    font-size: 14px;
+    padding: 13px 15px;
   }
 
   form.subscribe-amk-tems input[type="email"] {
-      font-size: 13px;
-      padding: 13px 11px;
+    font-size: 13px;
+    padding: 13px 11px;
   }
 
   .about-right-faq h3 {
-      font-size: 28px;
+    font-size: 28px;
   }
 
   .about-right-faq h6 {
-      font-size: 13px;
+    font-size: 13px;
   }
 
   h3.temps-amkls_pvt-title {
-      font-size: 2.1rem;
+    font-size: 2.1rem;
   }
 
   p.text-sty-banner {
-      font-size: 13px;
+    font-size: 13px;
   }
 
   .search-temps-amklayouts input[type="search"] {
-      padding: 10px 15px;
+    padding: 10px 15px;
   }
 
   .dwn-temps-amkls {
-      width: 40px;
-      height: 40px;
+    width: 40px;
+    height: 40px;
   }
 
   .dwn-temps-amkls span {
-      font-size: 15px;
-      line-height: 26px;
+    font-size: 15px;
+    line-height: 26px;
   }
 
   h6.accordion-textm {
-      font-size: 16px;
+    font-size: 16px;
   }
 
   .contact-amk-tems-do .form-control {
-      font-size: 13px;
+    font-size: 13px;
   }
 
   button.btn-cont-temps-amk {
-      font-size: 15px;
+    font-size: 15px;
   }
 }
 
-@media(max-width: 320px) {
+@media (max-width: 320px) {
   h3.title-temps-amk {
-      font-size: 24px;
+    font-size: 24px;
   }
 
   p.title-sub-2 {
-      font-size: 14px;
+    font-size: 14px;
   }
 
   .count-temps-amkls h4 {
-      font-size: 28px;
+    font-size: 28px;
   }
 
   .about-right-faq h3 {
-      font-size: 26px;
+    font-size: 26px;
   }
 
   ul.temps-amkl-right-book li {
-      font-size: 14px;
+    font-size: 14px;
   }
 
   .button-style {
-      padding: 13px 20px;
-      font-size: 12px;
+    padding: 13px 20px;
+    font-size: 12px;
   }
 
   .prices-top {
-      left: 35%;
+    left: 35%;
   }
 }
 
 /* //responsive */
 
 .options {
-  display:grid;
+  display: grid;
   grid-gap: 2rem;
   grid-template-areas:
-  "a b "
-  "c d"
+    "a b "
+    "c d";
 }
-.a{
+.a {
   grid-area: a;
 }
-.b{
+.b {
   grid-area: b;
 }
-.c{
+.c {
   grid-area: c;
 }
-.d{
+.d {
   grid-area: d;
 }
 
-.ques{
-  color:rgb(110, 110, 110)
+.ques {
+  color: rgb(110, 110, 110);
 }
 
-.label{
-  margin-top:2rem;
+.label {
+  margin-top: 2rem;
   margin-bottom: 2rem;
 }
 
-.next{
- text-align: center
+.next {
+  text-align: center;
 }
-.btn-primary{
-  background: rgb(51, 51, 51)
- }
+.btn-primary {
+  background: rgb(51, 51, 51);
+}
 
-
- .cardd{
-   /* margin-left: 3rem; */
-   /* text-align: center   */
- }
+.cardd {
+  /* margin-left: 3rem; */
+  /* text-align: center   */
+}
 .card {
   /* text-align: center; */
   /* width:800px; */
@@ -1693,40 +1684,35 @@ button.btn-cont-temps-amk {
   display: flex;
   justify-content: space-between;
   align-content: space-between;
-
 }
 
-.PostBoxpic{
+.PostBoxpic {
   margin-right: 1rem;
   max-width: 90px;
   max-height: 50px;
-
 }
 
-.PostBoxInput{
-  grid-area: "b"
+.PostBoxInput {
+  grid-area: "b";
 }
 
-
-.feedPost{
+.feedPost {
   margin-top: 10px;
   display: flex;
   /* grid-template-columns: 100px ; */
   /* grid-gap: 10px; */
-  flex-direction: column
+  flex-direction: column;
   /* justify-content: start */
 }
 
 .dashboard {
   display: grid;
   grid-gap: 10px;
-      grid-template-columns: 200px  ;
-      grid-template-areas:
-      "content content sidebar"
-      /* "content  content  sidebar"; */
-      /* background-color: #fff; */
-      /* color: #444; */
-
+  grid-template-columns: 200px;
+  grid-template-areas: "content content sidebar";
+  /* "content  content  sidebar"; */
+  /* background-color: #fff; */
+  /* color: #444; */
 }
 
 .sidebar {
@@ -1739,20 +1725,19 @@ button.btn-cont-temps-amk {
   /* position: relative; */
 }
 
-.alert{
+.alert {
   width: 20rem;
   max-width: 20rem;
   max-height: 5rem;
 }
 
-.live{
+.live {
   display: flex;
   flex-direction: column;
 }
 
 .compButton {
   text-align: center;
-
 }
 
 /* .compdiv{
